--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
         </div>
         <div class="row">
           <div class="col-md-4">
-            <img src="Donald-trump.jpg" class="center-block img-responsive">
+            <img src="http://www.suffolk.edu/images/News/Perlman_google_glass.jpg"
+            class="center-block img-responsive">
             <h3 class="text-center">Donald Trump</h3>
             <p class="text-center">Paralegal</p>
           </div>
