changed qna markup

--- a/index.html
+++ b/index.html
@@ -406,13 +406,13 @@ A:Yes
 							A: No.
 								Q(1.1.1.2.1.1.1.1.2): OK. I hope I was of help.
 					A: No.
-						Q(1.1.1.2.1.1.2): Unfortunately.  A graaduate of a civil-law country must have an LLM degreee from an ABA accredited or Mass authorized law school.
+						Q(1.1.1.2.1.1.2): Unfortunately.  Customer confusion is necessary. No infringement here.
 				A: No.
-					Q(1.1.1.2.1.2): Sorry.  You cannot be admitted to the Mass bar unless you are in good standing with the bar in all jurisdictions you are admitted.
+					Q(1.1.1.2.1.2): Sorry.  Being sufficiently similar is necessary. There is no infringement.
 			A: No.
-				Q(1.1.1.2.2): Sorry you cannot be admitted to the Mass Bar unless you are admitted to practice law in a foreign country.	
+				Q(1.1.1.2.2): Sorry priority is necessary. No infringement.	
 	A: No.
-		Q(1.1.2): Unfortunately, you cannot be admitted to the Mass Bar until you graduate law school.
+		Q(1.1.2): This does not apply to you. Have a nice day.
 A:No.
 	Q(1.2): This does not apply to you.  Have a nice day.
 Q(2): What is your name?
