--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="btn-group">
-              <a href="#" class="btn btn-primary">Meet Sally</a>
+              <a href="#" class="btn btn-primary">Meet Quinn</a>
               <a href="#" class="btn btn-primary">Our Goal</a>
               <a href="#" class="btn btn-primary">Meet the Team<br></a>
             </div>
