--- a/index.html
+++ b/index.html
@@ -362,11 +362,7 @@
 		background: #ddd;
 	}
 </style>
-<FORM name="FORM" id="FORM"><div id="conversation" style="margin:15px auto 0 auto;padding:0 15px;max-width:500px"><div id='QandA' class='QandA'><div style='padding:15px;background:#ddffdd;text-align:center;'>Loading QnA...</div></div><div id='Choices' class='choices'></div><div id='rawmarkup' style='display:none;'>Title:
-Author:
-Description:
-
-Q(1): Hello, do you have a valid trademark?
+<FORM name="FORM" id="FORM"><div id="conversation" style="margin:15px auto 0 auto;padding:0 15px;max-width:500px"><div id='QandA' class='QandA'><div style='padding:15px;background:#ddffdd;text-align:center;'>Loading QnA...</div></div><div id='Choices' class='choices'></div><div id='rawmarkup' style='display:none;'>Q(1): Hello, do you have a valid trademark?
 A:Yes
 	Q(1.1): Do you believe that someone is infringing on your trademark?
 	A: Yes.  
@@ -428,12 +424,7 @@ X:name
 					DOC(2.1.1.1.1.1): Dear &lt;x&gt;address&lt;/x&gt;&lt;br&gt;&lt;br&gt; Dear &lt;x&gt;infringer&lt;/x&gt;,&lt;br&gt;&lt;br&gt; We have recently discovered that your business is using the mark &lt;x&gt;trademark&lt;/x&gt; for your service or product.  We believe your use infringes on our ownership of the &lt;x&gt;trademark&lt;/x&gt; mark.  We learned of your use of the same or similar &lt;x&gt;trademark&lt;/x&gt; mark in January.&lt;br&gt;&lt;br&gt;  You must cease and desist any use of the mark.  Please sign the letter and we recommend you consult an attorney.&lt;br&gt;&lt;br&gt; Sincerely,&lt;br&gt;&lt;br&gt; &lt;x&gt;name&lt;/x&gt;
 					Q(2.1.1.1.1.1): Alright, are you ready to see your letter?
 					A:[javascript:submit2('http://www.qnamarkup.org/doc/parse/html/', 'POST', 't', 'Proof read your letter. Print it out, and mail it to: Santa Clause, North Pole')] Yes.
-						Q(2.1.1.1.1.1.1): Thank You.
-  
-
-		
-			
-		</div><div id="ondeck" name="ondeck"><div id="doc" name="doc" style="display:none;"></div><div id='Q-1' name='Q-1' style='display:none;'> Hello, do you have a valid trademark?
+						Q(2.1.1.1.1.1.1): Thank You.</div><div id="ondeck" name="ondeck"><div id="doc" name="doc" style="display:none;"></div><div id='Q-1' name='Q-1' style='display:none;'> Hello, do you have a valid trademark?
 </div><div id='Q-1.1' name='Q-1.1' style='display:none;'> Do you believe that someone is infringing on your trademark?
 </div><div id='Q-1.1.1' name='Q-1.1.1' style='display:none;'> What is the strength of your mark?
 </div><div id='Q-1.1.1.1' name='Q-1.1.1.1' style='display:none;'> Great.  Is the infringing mark sufficiently similar to yours?
@@ -453,24 +444,19 @@ X:name
 </div><div id='Q-1.1.1.2.1.1.1.1.1' name='Q-1.1.1.2.1.1.1.1.1' style='display:none;'> Okay. There is a legitimate likelihood of Trademark Infringement.  Would you like to draft a cease and desist letter to the other party?
 </div><div id='Q-1.1.1.2.1.1.1.1.1.1' name='Q-1.1.1.2.1.1.1.1.1.1' style='display:none;'>GOTO:2
 </div><div id='Q-1.1.1.2.1.1.1.1.2' name='Q-1.1.1.2.1.1.1.1.2' style='display:none;'> OK. I hope I was of help.
-</div><div id='Q-1.1.1.2.1.1.2' name='Q-1.1.1.2.1.1.2' style='display:none;'> Unfortunately.  A graaduate of a civil-law country must have an LLM degreee from an ABA accredited or Mass authorized law school.
-</div><div id='Q-1.1.1.2.1.2' name='Q-1.1.1.2.1.2' style='display:none;'> Sorry.  You cannot be admitted to the Mass bar unless you are in good standing with the bar in all jurisdictions you are admitted.
-</div><div id='Q-1.1.1.2.2' name='Q-1.1.1.2.2' style='display:none;'> Sorry you cannot be admitted to the Mass Bar unless you are admitted to practice law in a foreign country.	
-</div><div id='Q-1.1.2' name='Q-1.1.2' style='display:none;'> Unfortunately, you cannot be admitted to the Mass Bar until you graduate law school.
+</div><div id='Q-1.1.1.2.1.1.2' name='Q-1.1.1.2.1.1.2' style='display:none;'> Unfortunately.  Customer confusion is necessary. No infringement here.
+</div><div id='Q-1.1.1.2.1.2' name='Q-1.1.1.2.1.2' style='display:none;'> Sorry.  Being sufficiently similar is necessary. There is no infringement.
+</div><div id='Q-1.1.1.2.2' name='Q-1.1.1.2.2' style='display:none;'> Sorry priority is necessary. No infringement.	
+</div><div id='Q-1.1.2' name='Q-1.1.2' style='display:none;'> This does not apply to you. Have a nice day.
 </div><div id='Q-1.2' name='Q-1.2' style='display:none;'> This does not apply to you.  Have a nice day.
 </div><div id='Q-2' name='Q-2' style='display:none;'> What is your name?
 </div><div id='Q-2.1' name='Q-2.1' style='display:none;'> What is the infringer's name?
 </div><div id='Q-2.1.1' name='Q-2.1.1' style='display:none;'> what is the infringer's address?
 </div><div id='Q-2.1.1.1' name='Q-2.1.1.1' style='display:none;'>what is the name of your trademark?
 </div><div id='Q-2.1.1.1.1' name='Q-2.1.1.1.1' style='display:none;'>what is your registered trademark number?
-</div><div id='D-2.1.1.1.1.1' name='D-2.1.1.1.1.1' style='display:none;'> Dear <x>address</x><br><br> Dear <x>infringer</x>,<br><br> We have recently discovered that your business is using the mark <x>trademark</x> for your service or product.  We believe your use infringes on our ownership of the <x>trademark</x> mark.  We learned of your use of the same or similar <x>trademark</x> mark in January.<br><br>  You must cease and desist any use of the mark.  Please sign the letter and we recommend you consult an attorney.<br><br> Sincerely,<br><br> <x>name</x>
+</div><div id='D-2.1.1.1.1.1' name='D-2.1.1.1.1.1' style='display:none;'> Dear &lt;x&gt;address&lt;/x&gt;&lt;br&gt;&lt;br&gt; Dear &lt;x&gt;infringer&lt;/x&gt;,&lt;br&gt;&lt;br&gt; We have recently discovered that your business is using the mark &lt;x&gt;trademark&lt;/x&gt; for your service or product.  We believe your use infringes on our ownership of the &lt;x&gt;trademark&lt;/x&gt; mark.  We learned of your use of the same or similar &lt;x&gt;trademark&lt;/x&gt; mark in January.&lt;br&gt;&lt;br&gt;  You must cease and desist any use of the mark.  Please sign the letter and we recommend you consult an attorney.&lt;br&gt;&lt;br&gt; Sincerely,&lt;br&gt;&lt;br&gt; &lt;x&gt;name&lt;/x&gt;
 </div><div id='Q-2.1.1.1.1.1' name='Q-2.1.1.1.1.1' style='display:none;'> Alright, are you ready to see your letter?
-</div><div id='Q-2.1.1.1.1.1.1' name='Q-2.1.1.1.1.1.1' style='display:none;'> Thank You.
-  
-
-		
-			
-		</div><div id='A-1.1' name='A-1.1' style='display:none;'>Yes
+</div><div id='Q-2.1.1.1.1.1.1' name='Q-2.1.1.1.1.1.1' style='display:none;'> Thank You.</div><div id='A-1.1' name='A-1.1' style='display:none;'>Yes
 </div><div id='A-href-1.1' name='A-href-1.1' style='display:none;'>javascript:void('');</div><div id='A-target-1.1' name='A-target-1.1' style='display:none;'></div><div id='X-1.1' name='X-1.1' style='display:none;'></div><div id='A-1.1.1' name='A-1.1.1' style='display:none;'> Yes.  
 </div><div id='A-href-1.1.1' name='A-href-1.1.1' style='display:none;'>javascript:void('');</div><div id='A-target-1.1.1' name='A-target-1.1.1' style='display:none;'></div><div id='X-1.1.1' name='X-1.1.1' style='display:none;'></div><div id='A-1.1.1.1' name='A-1.1.1.1' style='display:none;'> It is Registered.
 </div><div id='A-href-1.1.1.1' name='A-href-1.1.1.1' style='display:none;'>javascript:void('');</div><div id='A-target-1.1.1.1' name='A-target-1.1.1.1' style='display:none;'></div><div id='X-1.1.1.1' name='X-1.1.1.1' style='display:none;'></div><div id='A-1.1.1.1.1' name='A-1.1.1.1.1' style='display:none;'> Yes.
@@ -515,24 +501,19 @@ X:name
 </div><div id='Q-1.1.1.2.1.1.1.1.1' name='Q-1.1.1.2.1.1.1.1.1' style='display:none;'> Okay. There is a legitimate likelihood of Trademark Infringement.  Would you like to draft a cease and desist letter to the other party?
 </div><div id='Q-1.1.1.2.1.1.1.1.1.1' name='Q-1.1.1.2.1.1.1.1.1.1' style='display:none;'>GOTO:2
 </div><div id='Q-1.1.1.2.1.1.1.1.2' name='Q-1.1.1.2.1.1.1.1.2' style='display:none;'> OK. I hope I was of help.
-</div><div id='Q-1.1.1.2.1.1.2' name='Q-1.1.1.2.1.1.2' style='display:none;'> Unfortunately.  A graaduate of a civil-law country must have an LLM degreee from an ABA accredited or Mass authorized law school.
-</div><div id='Q-1.1.1.2.1.2' name='Q-1.1.1.2.1.2' style='display:none;'> Sorry.  You cannot be admitted to the Mass bar unless you are in good standing with the bar in all jurisdictions you are admitted.
-</div><div id='Q-1.1.1.2.2' name='Q-1.1.1.2.2' style='display:none;'> Sorry you cannot be admitted to the Mass Bar unless you are admitted to practice law in a foreign country.	
-</div><div id='Q-1.1.2' name='Q-1.1.2' style='display:none;'> Unfortunately, you cannot be admitted to the Mass Bar until you graduate law school.
+</div><div id='Q-1.1.1.2.1.1.2' name='Q-1.1.1.2.1.1.2' style='display:none;'> Unfortunately.  Customer confusion is necessary. No infringement here.
+</div><div id='Q-1.1.1.2.1.2' name='Q-1.1.1.2.1.2' style='display:none;'> Sorry.  Being sufficiently similar is necessary. There is no infringement.
+</div><div id='Q-1.1.1.2.2' name='Q-1.1.1.2.2' style='display:none;'> Sorry priority is necessary. No infringement.	
+</div><div id='Q-1.1.2' name='Q-1.1.2' style='display:none;'> This does not apply to you. Have a nice day.
 </div><div id='Q-1.2' name='Q-1.2' style='display:none;'> This does not apply to you.  Have a nice day.
 </div><div id='Q-2' name='Q-2' style='display:none;'> What is your name?
 </div><div id='Q-2.1' name='Q-2.1' style='display:none;'> What is the infringer's name?
 </div><div id='Q-2.1.1' name='Q-2.1.1' style='display:none;'> what is the infringer's address?
 </div><div id='Q-2.1.1.1' name='Q-2.1.1.1' style='display:none;'>what is the name of your trademark?
 </div><div id='Q-2.1.1.1.1' name='Q-2.1.1.1.1' style='display:none;'>what is your registered trademark number?
-</div><div id='D-2.1.1.1.1.1' name='D-2.1.1.1.1.1' style='display:none;'> Dear <x>address</x><br><br> Dear <x>infringer</x>,<br><br> We have recently discovered that your business is using the mark <x>trademark</x> for your service or product.  We believe your use infringes on our ownership of the <x>trademark</x> mark.  We learned of your use of the same or similar <x>trademark</x> mark in January.<br><br>  You must cease and desist any use of the mark.  Please sign the letter and we recommend you consult an attorney.<br><br> Sincerely,<br><br> <x>name</x>
+</div><div id='D-2.1.1.1.1.1' name='D-2.1.1.1.1.1' style='display:none;'> Dear &lt;x&gt;address&lt;/x&gt;&lt;br&gt;&lt;br&gt; Dear &lt;x&gt;infringer&lt;/x&gt;,&lt;br&gt;&lt;br&gt; We have recently discovered that your business is using the mark &lt;x&gt;trademark&lt;/x&gt; for your service or product.  We believe your use infringes on our ownership of the &lt;x&gt;trademark&lt;/x&gt; mark.  We learned of your use of the same or similar &lt;x&gt;trademark&lt;/x&gt; mark in January.&lt;br&gt;&lt;br&gt;  You must cease and desist any use of the mark.  Please sign the letter and we recommend you consult an attorney.&lt;br&gt;&lt;br&gt; Sincerely,&lt;br&gt;&lt;br&gt; &lt;x&gt;name&lt;/x&gt;
 </div><div id='Q-2.1.1.1.1.1' name='Q-2.1.1.1.1.1' style='display:none;'> Alright, are you ready to see your letter?
-</div><div id='Q-2.1.1.1.1.1.1' name='Q-2.1.1.1.1.1.1' style='display:none;'> Thank You.
-  
-
-		
-			
-		</div><div id='A-1.1' name='A-1.1' style='display:none;'>Yes
+</div><div id='Q-2.1.1.1.1.1.1' name='Q-2.1.1.1.1.1.1' style='display:none;'> Thank You.</div><div id='A-1.1' name='A-1.1' style='display:none;'>Yes
 </div><div id='A-href-1.1' name='A-href-1.1' style='display:none;'>javascript:void('');</div><div id='A-target-1.1' name='A-target-1.1' style='display:none;'></div><div id='X-1.1' name='X-1.1' style='display:none;'></div><div id='A-1.1.1' name='A-1.1.1' style='display:none;'> Yes.  
 </div><div id='A-href-1.1.1' name='A-href-1.1.1' style='display:none;'>javascript:void('');</div><div id='A-target-1.1.1' name='A-target-1.1.1' style='display:none;'></div><div id='X-1.1.1' name='X-1.1.1' style='display:none;'></div><div id='A-1.1.1.1' name='A-1.1.1.1' style='display:none;'> It is Registered.
 </div><div id='A-href-1.1.1.1' name='A-href-1.1.1.1' style='display:none;'>javascript:void('');</div><div id='A-target-1.1.1.1' name='A-target-1.1.1.1' style='display:none;'></div><div id='X-1.1.1.1' name='X-1.1.1.1' style='display:none;'></div><div id='A-1.1.1.1.1' name='A-1.1.1.1.1' style='display:none;'> Yes.
